change file structure

--- a/scripts/replicate_brazil-RD.Rmd
+++ b/scripts/replicate_brazil-RD.Rmd
@@ -6,11 +6,11 @@
 ## The file we downloaded is a stata file, 
 ## but is downloaded with the extension .tab. 
 ## We first rename the file then read it in 
-file.rename(here::here("original_materials", "brazil-RD-data.tab"),
-here::here("original_materials", "brazil-RD-data_renamed.dta"))
+file.rename(here::here("original_materials", "main_paper", "brazil-RD-data.tab"),
+here::here("original_materials", "main_paper", "brazil-RD-data_renamed.dta"))
 
 df <- haven::read_dta(
-    here::here("original_materials", "brazil-RD-data_renamed.dta"))
+    here::here("original_materials", "main_paper", "brazil-RD-data_renamed.dta"))
 
 summary(df)
 
