--- a/writeup/Template.tex
+++ b/writeup/Template.tex
@@ -17,7 +17,7 @@
 \usepackage{amsthm}
 \usepackage{MJOARTI}
 \usepackage{setspace}
-%\onehalfspacing
+\onehalfspacing
 %\doublespacing
 %\usepackage{vmargin}
 \usepackage{graphicx}
