--- a/writeup/Template.tex
+++ b/writeup/Template.tex
@@ -94,9 +94,9 @@
 
 \begin{document}
 
-\date{January 3rd, 2022}
+\date{March 18th, 2023}
 
-\title{Template: Title: A comment on Speedy Analyst et al. (2022)\thanks{Authors: 
+\title{Template: Title: A comment on Hollyer, Klasnja and Titiunik (2022) \thanks{Authors: 
 Brodeur: University of Ottawa and IZA. E-mail: \href{mailto:abrodeur@uottawa.ca}%
 {abrodeur@uottawa.ca}. For each author: List your affiliation(s) and contact information. Indicate who is the corresponding author if multiple authors. For each author: Acknowledge any financial support or conflict of interest. Describe your relationship with the original author(s) if there is a conflict of interest. Examples of conflict of interest include, but are not limited to, being a colleague, collaborator, current or former student, former thesis supervisor or family member. See I4R’s conflict of interest policy here: \url{https://i4replication.org/conflict.html}.}}
 \author{Abel Brodeur}
