delete some abstract

--- a/writeup/Template.tex
+++ b/writeup/Template.tex
@@ -96,10 +96,10 @@
 
 \date{March 18th, 2023}
 
-\title{Template: Title: A comment on Hollyer, Klasnja and Titiunik (2022) \thanks{Authors: 
+\title{Title: A comment on Hollyer, Klasnja and Titiunik (2022) \thanks{Authors: 
 Brodeur: University of Ottawa and IZA. E-mail: \href{mailto:abrodeur@uottawa.ca}%
 {abrodeur@uottawa.ca}. For each author: List your affiliation(s) and contact information. Indicate who is the corresponding author if multiple authors. For each author: Acknowledge any financial support or conflict of interest. Describe your relationship with the original author(s) if there is a conflict of interest. Examples of conflict of interest include, but are not limited to, being a colleague, collaborator, current or former student, former thesis supervisor or family member. See I4R’s conflict of interest policy here: \url{https://i4replication.org/conflict.html}.}}
-\author{Abel Brodeur}
+\author{}
 
 \maketitle
 
@@ -129,7 +129,7 @@ Brodeur: University of Ottawa and IZA. E-mail: \href{mailto:abrodeur@uottawa.ca}
  
 %Conceptual replicability: The ability to duplicate the results of a prior study using new data and different procedures as were used by the original investigator.
 
-\small{Example: Speedy \cite{analyst_2022} examine the effect of a policy implemented in the fictional country Labas. In their preferred analytical specification, the authors find that the policy (PROSCOL) increased educational attainment of the treated group by 33 percentage points and decreased fertility by 9.8\%. Their point estimates are statistically significant at the 5\% and 10\% levels, respectively. First, we reproduce the paper’s main findings and uncover two minor coding errors which have no effect on the studies’ main results. Second, we test the robustness of the results to (1) adding more years to the sample and (2) changing how standard errors are clustered. We find that adding more years to the sample decreases the size of the point estimate by one-third for education and by one-fourth for fertility. The point estimate for fertility becomes statistically insignificant at the 10\% level, while it remains significant at the 5\% level for education. Clustering at the region level makes the point estimates for education and fertility to be statistically insignificant at the 10% level. 
+\small{
 
 Example for a direct replication of an experimental study: We conduct a direct replication of the paper by using the same procedures (i.e., method and analysis) and new data. We confirm the sign, magnitude and statistical significance of the point estimates for outcome X.} \newline
 
